--- a/app/src/main/res/layout/activity_select_option_auth_actitivty.xml
+++ b/app/src/main/res/layout/activity_select_option_auth_actitivty.xml
@@ -9,6 +9,10 @@
     android:background="@color/colorPrimaryLight"
     tools:context=".SelectOptionAuthActitivty">
 
+    <include layout="@layout/action_bar_toolbar">
+
+    </include>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -33,6 +37,7 @@
             android:textColor="@color/textPrimary"
             />
         <Button
+            android:id="@+id/buttonLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Iniciar sesión"
@@ -40,6 +45,7 @@
             android:backgroundTint="@color/colorPrimary"/>
 
         <Button
+            android:id="@+id/buttonRegister"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
